fixed gap around map on contact page at 620px

--- a/styles.css
+++ b/styles.css
@@ -665,3 +665,8 @@ font-weight: 500;
   display: none;
 }
 }
+
+/*footer*/
+footer {
+  margin-top: -10px;
+}
